--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
     "declaration": true,
+    "lib": ["ES6"],
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "outDir": "./dist",
     "noImplicitAny": false,
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "strict": false
+    "strict": false,
+    "target": "ES6"
   },
   "include": [
     "src/**/*"
